--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "@clerk/nextjs": "^5.4.1",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-select": "^2.1.1",
+    "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slider": "^1.2.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tooltip": "^1.1.2",
     "@reduxjs/toolkit": "^2.2.7",
     "@vercel/speed-insights": "^1.0.12",
     "chart.js": "^4.4.4",
