--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
     "@reduxjs/toolkit": "^2.2.7",
+    "@supabase/supabase-js": "^2.45.3",
     "@vercel/speed-insights": "^1.0.12",
     "chart.js": "^4.4.4",
     "class-variance-authority": "^0.7.0",
