--- a/package.json
+++ b/package.json
@@ -18,8 +18,9 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
     "@reduxjs/toolkit": "^2.2.7",
+    "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/ssr": "^0.5.1",
-    "@supabase/supabase-js": "^2.45.3",
+    "@supabase/supabase-js": "^2.45.4",
     "@vercel/speed-insights": "^1.0.12",
     "chart.js": "^4.4.4",
     "class-variance-authority": "^0.7.0",
