--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "start": "next start"
   },
   "dependencies": {
-    "@clerk/nextjs": "^5.5.4",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-label": "^2.1.0",
@@ -19,6 +18,7 @@
     "@radix-ui/react-tooltip": "^1.1.2",
     "@reduxjs/toolkit": "^2.2.7",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
+    "@supabase/auth-helpers-react": "^0.5.0",
     "@supabase/ssr": "^0.5.1",
     "@supabase/supabase-js": "^2.45.4",
     "@vercel/speed-insights": "^1.0.12",
@@ -26,7 +26,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.438.0",
-    "next": "14.2.7",
+    "next": "^14.2.15",
     "next-pwa": "^5.6.0",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
